# HackerRank

./: .gitignore  LICENSE
HackerRank/: HackerRank.sln
HackerRank/Deque-STL/: Deque-STL.cpp  Deque-STL.vcxproj  Deque-STL.vcxproj.filters
HackerRank/GraphTheory-ProblemSo,lving/: GraphTheory-ProblemSo,lving.vcxproj  GraphTheory-ProblemSo,lving.vcxproj.filters  GraphTheory-ProblemSolving.cpp  results.txt  tests.txt
HackerRank/KingRichardsKnights/: KingRichardsKnights.vcxproj  main.cpp
HackerRank/MagicSpell/: MagicSpell.cpp  MagicSpell.vcxproj  MagicSpell.vcxproj.filters  Tests.txt  results.txt
HackerRank/MixingProteins/: MixingProteins.cpp  MixingProteins.vcxproj  MixingProteins.vcxproj.filters  results.txt  tests.txt
HackerRank/Polymorphism/: Polymorphism.cpp  Polymorphism.vcxproj
HackerRank/StringSimilarity/: StringSimilarity.cpp  StringSimilarity.vcxproj
HackerRank/VariadicsTemplate/: VariadicsTemplate.cpp  VariadicsTemplate.vcxproj  VariadicsTemplate.vcxproj.filters
HackerRank/twotwo/: main.cpp  serry.cpp  (+3 more)
cmake/: CMakeLists.txt  build.bat  solution.py
cmake/src/: CMakeLists.txt
cmake/src/ashtonString/: CMakeLists.txt  main.cpp
cmake/src/beautiful/: CMakeLists.txt  README.md  main.cpp
cmake/src/cerence/: CMakeLists.txt  main.cpp
cmake/src/matrixRotation/: CMakeLists.txt  main.cpp
cmake/src/route/: CMakeLists.txt  main.cpp
cmake/tools/solution/: ErrorParser.py  Solution.py  linux-arm64.py  linux-x86.py  linux.py  qnx.py  qnx700-aarch64.py  qnx700-x86.py  qnx710-aarch64.py  qnx710-x86.py  solution_main.py  vs.py  vs2019.py  vs2022.py
